# MonaEngineDemos

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
AnimationAudio/: AnimationAudio.cpp  CMakeLists.txt
AnimationAudio/Assets/Animations/TheBoss/: Idle.fbx  walking0.fbx  walking1.fbx  walking2.fbx  walking3.fbx
AnimationAudio/Assets/Animations/akai/: walking1.fbx  walking2.fbx  walking3.fbx
AnimationAudio/Assets/Animations/ely/: idle.fbx  walking0.fbx  walking1.fbx  walking2.fbx  walking3.fbx
AnimationAudio/Assets/Animations/prisoner/: idle.fbx  walking0.fbx  walking1.fbx  walking2.fbx  walking3.fbx
AnimationAudio/Assets/Animations/xbot/: idle.fbx  walking0.fbx  walking1.fbx  walking2.fbx  walking3.fbx
AnimationAudio/Assets/Models/: TheBoss.fbx  ely.fbx  prisoner.fbx  xbot.fbx
Breakout2/: CMakeLists.txt  README.md
BreakoutPhysics/: Breakout_physics.cpp  CMakeLists.txt
RnD-ECS/: CMakeLists.txt  ECSBreakout.cpp  ECSExample.cpp
RnD-ECS/ECS/Components/: CollisionComponents.hpp  InputComponents.hpp  StatComponents.hpp
RnD-ECS/ECS/Events/: CollisionEvents.hpp  ColorChangeEvents.hpp  DestroyGameObjectEvents.hpp  InputEvents.hpp
RnD-ECS/ECS/Systems/: CollisionSystem.cpp  CollisionSystem.hpp  InputSystem.cpp  InputSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  StatsSystem.cpp  StatsSystem.hpp
RnD-IK/: CMakeLists.txt  IKBasicExample.cpp  IKMultipleCharactersExample.cpp  IKMultipleTerrainsExample.cpp  IKTest.cpp  NoIKTest.cpp
TopDown/: CMakeLists.txt  coin.cpp  coin.h  custom_events.h  floor.cpp  floor.h  high_level_game.h  level_progression.cpp  level_progression.h  player.cpp  player.h  top_down_camera.cpp  top_down_camera.h  top_down_demo.cpp
